# Speech_VAD_Diarization_Transcription

./: .flake8  .gitignore  Makefile  README.md  app_gui.py  conversation_pipeline.py  environment-minimal.yml  environment.yml  pyproject.toml  requirements-lock-uv-cpu.txt  requirements-lock-uv.txt  requirements.txt  setup.py
conversation_vad_labeler/: labeling.py
demo/annotations/: demo_labels.txt
src/: __init__.py  audio_preprocessing.py  compute_turn_errors.py  conversation.py  evaluation.py  evaluation_plots.py  fix_torchaudio.py  labeling.py  merge_turns.py  postprocess_vad.py  transcription.py  vad.py
