[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
    # Virtual environments
    \.venv
    | venv
    | env
    | ENV
    # Python
    | __pycache__
    | build
    | develop-eggs
    | dist
    | downloads
    | eggs
    | \.eggs
    | lib
    | lib64
    | parts
    | sdist
    | var
    | wheels
    | \.egg-info
    # Jupyter
    | \.ipynb_checkpoints
    # IDE
    | \.vscode
    | \.idea
    # Project-specific
    | examples
    | outputs
    | interim
    | pretrained_models
    | natural-turn-transcription
    # Existing
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \natural-turn-transcription
  )/
  | ^speech_separation\.ipynb$
  | ^speech_separation_chunked\.py$
  | ^run_separation_and_pipeline\.py$
  | ^run_pipeline_only\.py$
  | \.py[co]$
  | \.so$
  | ^\.Python$
  | ^\.installed\.cfg$
  | \.egg$
  | \.swp$
  | \.swo$
  | ~$
  | ^\.DS_Store$
  | ^Thumbs\.db$
)
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["speech_vad_diarization"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".venv/**",
    "venv/**",
    "env/**",
    "ENV/**",
    "__pycache__/**",
    "build/**",
    "develop-eggs/**",
    "dist/**",
    "downloads/**",
    "eggs/**",
    ".eggs/**",
    "lib/**",
    "lib64/**",
    "parts/**",
    "sdist/**",
    "var/**",
    "wheels/**",
    "*.egg-info/**",
    ".ipynb_checkpoints/**",
    ".vscode/**",
    ".idea/**",
    "examples/**",
    "outputs/**",
    "interim/**",
    "pretrained_models/**",
    "natural-turn-transcription/**",
    "speech_separation.ipynb",
    "speech_separation_chunked.py",
    "run_separation_and_pipeline.py",
    "run_pipeline_only.py",
    ".DS_Store",
    "Thumbs.db",
    "*.py[cod]",
    "*.so",
    ".Python",
    ".installed.cfg",
    "*.egg",
    "*.swp",
    "*.swo",
    "*~"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true  # For third-party libs without stubs
exclude = '''
(?x)(
  \.venv/
  | venv/
  | env/
  | ENV/
  | __pycache__/
  | build/
  | develop-eggs/
  | dist/
  | downloads/
  | eggs/
  | \.eggs/
  | lib/
  | lib64/
  | parts/
  | sdist/
  | var/
  | wheels/
  | \.egg-info/
  | \.ipynb_checkpoints/
  | \.vscode/
  | \.idea/
  | examples/
  | outputs/
  | interim/
  | pretrained_models/
  | natural-turn-transcription/
  | speech_separation\.ipynb$
  | speech_separation_chunked\.py$
  | run_separation_and_pipeline\.py$
  | run_pipeline_only\.py$
  | \.DS_Store$
  | Thumbs\.db$
  | \.py[co]$
  | \.so$
  | \.Python$
  | \.installed\.cfg$
  | \.egg$
  | \.swp$
  | \.swo$
  | ~$
)
'''