[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-vad-diarization-transcription"
version = "1.0.1"
description = "WP1: Conversational Speech Processing Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyannote.audio>=4.0.0",
  "pyannote.metrics>=4.0.0",
  "jiwer>=3.0.0",
  "sacrebleu>=2.0.0",
  "speechbrain>=1.0.0",
  "transformers>=4.48.0",
  "tokenizers>=0.21.0",
  "soundfile>=0.12.0",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "rvadfast>=0.0.5",
  "asteroid-filterbanks>=0.4.0",
  "torch-audiomentations>=0.12.0",
  "numpy>=1.25.0",
  "scipy>=1.11.0",
  "pandas>=2.2.0",
  "intervaltree>=3.1.0",
  "datasets>=4.0.0",
  "huggingface-hub>=0.36.0",
  "pyyaml>=6.0",
  "tqdm>=4.65.0",
  "rich>=14.0.0",
  "codecarbon>=2.2.0",
  "carbontracker>=1.5.0",
]

[project.optional-dependencies]
dev = [
  "black>=23.0.0",
  "flake8>=6.0.0",
  "isort>=5.12.0",
  "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
    # Virtual environments
    \.venv
    | venv
    | env
    | ENV
    # Python
    | __pycache__
    | build
    | develop-eggs
    | dist
    | downloads
    | eggs
    | \.eggs
    | lib
    | lib64
    | parts
    | sdist
    | var
    | wheels
    | \.egg-info
    # Jupyter
    | \.ipynb_checkpoints
    # IDE
    | \.vscode
    | \.idea
    # Project-specific
    | examples
    | outputs
    | interim
    | pretrained_models
    | natural-turn-transcription
    # Existing
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \natural-turn-transcription
    | \tmp_scripts
  )/
  | ^speech_separation\.ipynb$
  | ^speech_separation_chunked\.py$
  | ^cp\.py$
  | \.py[co]$
  | \.so$
  | ^\.Python$
  | ^\.installed\.cfg$
  | \.egg$
  | \.swp$
  | \.swo$
  | ~$
  | ^\.DS_Store$
  | ^Thumbs\.db$
)
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["speech_vad_diarization_transcription"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    ".venv/**",
    "venv/**",
    "env/**",
    "ENV/**",
    "__pycache__/**",
    "build/**",
    "develop-eggs/**",
    "dist/**",
    "downloads/**",
    "eggs/**",
    ".eggs/**",
    "lib/**",
    "lib64/**",
    "parts/**",
    "sdist/**",
    "var/**",
    "wheels/**",
    "*.egg-info/**",
    ".ipynb_checkpoints/**",
    ".vscode/**",
    ".idea/**",
    "examples/**",
    "outputs/**",
    "interim/**",
    "pretrained_models/**",
    "natural-turn-transcription/**",
    "tmp_scripts/**",
    "speech_separation.ipynb",
    "speech_separation_chunked.py",
    "cp.py",
    ".DS_Store",
    "Thumbs.db",
    "*.py[cod]",
    "*.so",
    ".Python",
    ".installed.cfg",
    "*.egg",
    "*.swp",
    "*.swo",
    "*~"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true  # For third-party libs without stubs
exclude = '''
(?x)(
  \.venv/
  | venv/
  | env/
  | ENV/
  | __pycache__/
  | build/
  | develop-eggs/
  | dist/
  | downloads/
  | eggs/
  | \.eggs/
  | lib/
  | lib64/
  | parts/
  | sdist/
  | var/
  | wheels/
  | \.egg-info/
  | \.ipynb_checkpoints/
  | \.vscode/
  | \.idea/
  | examples/
  | outputs/
  | interim/
  | pretrained_models/
  | natural-turn-transcription/
  | tmp_scripts/
  | hyper/
  | speech_separation\.ipynb$
  | speech_separation_chunked\.py$
  | cp\.py$
  | \.DS_Store$
  | Thumbs\.db$
  | \.py[co]$
  | \.so$
  | \.Python$
  | \.installed\.cfg$
  | \.egg$
  | \.swp$
  | \.swo$
  | ~$
)
'''